# rag-naive

./: .env.example  .gitignore  .python-version  CLAUDE.md  MCP_HEALTH_SETUP.md  Makefile  README.md  TESTING.md  baseline_performance.json  compare_answers.py  config.py  demo_dashboard.py  demo_health_data.py  demo_multidoc.py  fetch_longevity_papers.py  fetch_vo2max_papers.py  final_demo.py  health_analysis.py  inspect_papers.py  main.py  papers.db  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_results.json
.claude/hooks/UserPromptsSubmit/: append_default.py  append_ultrathink.py
.github/workflows/: ci.yml  rag-quality-gates.yml
scripts/: pre-commit-quality-check.sh
src/: __init__.py  cache.py  chain.py  index_cache.py  indexer.py  loaders.py  monitoring.py  query.py  retrieval.py  splitters.py  utils.py
src/agent/: __init__.py  decision_tree.py  policy.py  tools.py  types.py
src/health/: __init__.py  connectors.py  database.py  etl.py  models.py  normalization.py  repository.py  service.py
src/mcp/: __init__.py  analysis_server.py  apple_health.py  health_analyzer.py  health_schema.py  health_server.py
src/sources/: base.py  paper_tracker.py  pmc.py
tests/: conftest.py  test_config.py  test_smoke.py
tests/integration/: test_agent_entrypoint_scaffold.py  test_end_to_end.py
tests/performance/: __init__.py  test_quality_gates.py  test_rag_vs_llm.py
tests/unit/: test_agent_scaffold.py  test_decision_agent_run.py  test_health_models.py  test_pmc_source.py  test_prompt.py
tests/web/: test_api.py  test_assistant_endpoint.py
web/backend/: app.py
web/frontend/: index.html
